--- a/trade_models.ipynb
+++ b/trade_models.ipynb
@@ -186,14 +186,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf3 = sm.Logit(arr[:,0] == 29,sm.add_constant(arr[:,1])).fit()\n",
+    "clf_pos = sm.Logit(arr[:,0]/29,sm.add_constant(arr[:,1])).fit()\n",
     "\n",
     "xp = np.linspace(-15,15)\n",
     "yp = 1/(1+np.exp(8.416 - 0.9239*(xp)))\n",
     "plt.plot(xp,yp)\n",
-    "plt.scatter(arr[:,1],clf3.predict(),c='r',alpha=0.1)\n",
+    "plt.scatter(arr[:,1],clf_pos.predict(),c='r',alpha=0.1)\n",
     "\n",
-    "clf3.summary()\n"
+    "clf_pos.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "YEARS_TO_MODEL = 12\n",
+    "YEARS_TO_USE = 20"
    ]
   },
   {
@@ -205,7 +215,7 @@
     "offset_years = defaultdict(list)\n",
     "for k,v in team_movs.items():\n",
     "    tid,s = k\n",
-    "    for i in range(1,5):\n",
+    "    for i in range(1,YEARS_TO_USE):\n",
     "        if (tid,s+i) in team_movs:\n",
     "            offset_years[i].append([v,team_movs[(tid,s+i)]])"
    ]
@@ -216,15 +226,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tmov_mul = {0:1}\n",
     "for k,v in offset_years.items():\n",
     "    arr = np.array(offset_years[k])\n",
     "    plt.figure()\n",
     "    plt.scatter(arr[:,0],arr[:,1])\n",
     "    plt.title(k)\n",
-    "    clf3 = sm.OLS(arr[:,0],sm.add_constant(arr[:,1])).fit()\n",
+    "    clf3 = sm.RLM(arr[:,0],arr[:,1]).fit()\n",
     "    xp = np.linspace(-15,15)\n",
-    "    plt.plot(xp,clf3.params[0]+xp*clf3.params[1],c='r')\n",
-    "    print(k,clf3.rsquared,clf3.params,)"
+    "    plt.plot(xp,xp*clf3.params[0],c='r')\n",
+    "    tmov_mul[k] = clf3.params[0]\n",
+    "    print(k,clf3.params,)"
    ]
   },
   {
@@ -507,15 +519,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mov"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "mov = {i:get_mov(i) for i in range(101)}"
    ]
   },
@@ -546,7 +549,7 @@
     "    year = s-ps\n",
     "    #if year < 6:\n",
     "    #pick_res[(pr,year)].append(np.argmin((v['ovr']-ovrs)**2))\n",
-    "    pick_res[(pr,year)].append(mov[v['ovr']])"
+    "    pick_res[(pr,year)].append(v['ovr'])"
    ]
   },
   {
@@ -555,8 +558,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draft_value = np.array([[np.quantile(pick_res[(p,yr)],0.75) for p in range(61)] for yr in range(5)]).T\n",
-    "draft_value = np.array([[np.mean([v for v in pick_res[(p,yr)] if v > r_lvl] + [r_lvl] ) for p in range(61)] for yr in range(5)]).T\n"
+    "draft_value = np.array([[np.quantile(pick_res[(p,yr)],0.75) for p in range(61)] for yr in range(YEARS_TO_MODEL)]).T\n",
+    "draft_value = np.array([[np.mean([v for v in pick_res[(p,yr)] if v > RL] + [RL] ) for p in range(61)] for yr in range(YEARS_TO_MODEL)]).T\n"
    ]
   },
   {
@@ -613,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(4):\n",
+    "for i in range(YEARS_TO_MODEL):\n",
     "    plt.figure()\n",
     "    plt.xlabel('pick')\n",
     "    plt.ylabel('MOV')\n",
@@ -628,10 +631,10 @@
    "outputs": [],
    "source": [
     "coeffs = []\n",
-    "for i in range(5):\n",
-    "    x = [0.5,2,0.5]\n",
+    "for i in range(YEARS_TO_MODEL):\n",
+    "    x = [0.10,10,0.7]\n",
     "    def testX(x):\n",
-    "        return np.linalg.norm(x[1]*np.exp(-x[0]*np.arange(60)**x[2]) - tA[:,i]+mov[0])\n",
+    "        return np.linalg.norm(x[1]*np.exp(-x[0]*np.arange(60)**x[2]) - tA[:,i]+RL)\n",
     "    coeffs.append(opt.fmin(testX,x))"
    ]
   },
@@ -652,9 +655,9 @@
    "source": [
     "for i,x in enumerate(coeffs[::-1]):\n",
     "    #plt.figure()\n",
-    "    plt.plot( x[1]*np.exp(-x[0]*np.arange(61)**x[2]) + mov[0]-r_lvl,label='year {}'.format(5-i))\n",
+    "    plt.plot( x[1]*np.exp(-x[0]*np.arange(61)**x[2]) + RL,label='year {}'.format(YEARS_TO_MODEL-i))\n",
     "plt.legend()\n",
-    "plt.plot([0,60],[0,0],c='k',lw=1.5,ls='--')\n",
+    "#plt.plot([0,60],[0,0],c='k',lw=1.5,ls='--')\n",
     "plt.xlabel('draft pick')\n",
     "plt.ylabel('MOV above replacement')"
    ]
@@ -667,9 +670,9 @@
    "source": [
     "for i,x in enumerate(coeffs[::-1]):\n",
     "    plt.figure()\n",
-    "    plt.plot(tA[:,4-i])\n",
-    "    plt.plot(x[1]*np.exp(-x[0]*np.arange(61)**x[2])+mov[0])\n",
-    "    plt.title('year {}'.format(5-i))\n",
+    "    plt.plot(tA[:,YEARS_TO_MODEL-1-i])\n",
+    "    plt.plot(x[1]*np.exp(-x[0]*np.arange(61)**x[2])+RL)\n",
+    "    plt.title('year {}'.format(YEARS_TO_MODEL-i))\n",
     "    plt.xlabel('draft pick')\n",
     "    plt.ylabel('MOV above replacement')"
    ]
@@ -718,8 +721,8 @@
    "outputs": [],
    "source": [
     "valid_seasons = sorted(set([s for tid,s in team_movs]))\n",
-    "valid_seasons = valid_seasons[:-5]\n",
-    "max_shift = max(age_shift.values())"
+    "valid_seasons = valid_seasons[:-YEARS_TO_USE]\n",
+    "max_shift = min(age_shift.values())"
    ]
   },
   {
@@ -742,6 +745,8 @@
     "sO = sm.RLM(sal_ovr[:,1],sal_ovr[:,0]).fit()\n",
     "plt.scatter(sal_ovr[:,0],sal_ovr[:,1])\n",
     "plt.scatter(sal_ovr[:,0],sO.predict())\n",
+    "plt.xlabel('% of max salary')\n",
+    "plt.ylabel('+/- above replacement')\n",
     "sA = sO.params[0]\n",
     "sA"
    ]
@@ -756,12 +761,20 @@
    "source": [
     "Xs = defaultdict(list)\n",
     "ys = defaultdict(list)\n",
+    "\n",
+    "term_data_x = []\n",
+    "term_data_y = []\n",
+    "\n",
     "for tid, s in team_movs:\n",
     "    if s in valid_seasons:\n",
+    "        itmov = team_movs[(tid,s)]\n",
+    "        \n",
     "        pars = defaultdict(list)\n",
     "        tss = defaultdict(int)\n",
     "\n",
-    "        for i in range(5):\n",
+    "        dpars = defaultdict(list)\n",
+    "        dtss = defaultdict(int)\n",
+    "        for i in range(YEARS_TO_MODEL):\n",
     "            for pid in team_players[(tid,s)]:\n",
     "                if (pid,s) in contracts and contracts[(pid,s)][1] >= i:\n",
     "                    tss[i] += contracts[(pid,s)][0]\n",
@@ -782,17 +795,20 @@
     "                        est_con = min(1,(mov_p-r_lvl)/sA) * 30000 \n",
     "                        tss[i] += est_con*RESIGN_CHANCE\n",
     "                        pars[i].append(RESIGN_CHANCE*mov_p)  \n",
-    "        for i in range(1,5):\n",
-    "            dpicks = draft_picks[(tid,s+i)]\n",
+    "        for i in range(1,YEARS_TO_MODEL):\n",
+    "            ppos = int(round(29*clf_pos.predict([1,tmov_mul[i]*itmov])[0]))\n",
+    "            dpicks = [ppos,ppos+30]\n",
+    "            #dpicks = draft_picks[(tid,s+i)]\n",
+    "            #print(i,dpicks)\n",
     "            for p in dpicks:\n",
     "                dsal = draft_salaries[p]\n",
-    "                for k,j in enumerate(range(i,5)):\n",
-    "                    tss[j] += dsal\n",
+    "                for k,j in enumerate(range(i,YEARS_TO_MODEL)):\n",
+    "                    dtss[j] += dsal\n",
     "                    x = coeffs[k]\n",
-    "                    pars[j].append(mov[0]+x[1]*np.exp(-x[0]*(p**x[2])))\n",
-    "\n",
+    "                    dpars[j].append(x[1]*np.exp(-x[0]*(p**x[2])))\n",
+    "        \n",
     "            #print(contracts[(pid,s)],(player_ratings[(pid,s)]['ovr']),)\n",
-    "        for i in range(5):\n",
+    "        for i in range(YEARS_TO_MODEL):\n",
     "            tmov = team_movs[(tid,s+i)]\n",
     "            play = [p for p in pars[i] if p >= r_lvl]\n",
     "            lp = len(play)\n",
@@ -800,8 +816,23 @@
     "                play= play + (10-lp)*[r_lvl]\n",
     "            play = sorted(play,reverse=True)[:10]\n",
     "            play_s = sum(play)\n",
-    "            Xs[i].append([tss[i] + (10-lp)*750,play_s])\n",
-    "            ys[i].append(tmov)\n"
+    "            play_d = sum([_ for _ in dpars[i]])\n",
+    "            \n",
+    "            cap_hit = tss[i] + (10-lp)*750 #+ dtss[i]\n",
+    "            \n",
+    "            diff = (90000-cap_hit)/30000\n",
+    "            cap_space = np.maximum(diff,0.1*diff)\n",
+    "            draft_pick_max_slots = dtss[i]/30000\n",
+    "            \n",
+    "            Xs[i].append([sA*cap_space,play_s,itmov*int(i!=0),play_d])\n",
+    "            ys[i].append(tmov)\n",
+    "        term_data_x.append([draft_pick_max_slots,play_d,itmov ])\n",
+    "        total_reward = []\n",
+    "        for i in range(YEARS_TO_MODEL,YEARS_TO_USE):\n",
+    "            tmov = 1.0/(1+np.exp(-team_movs[(tid,s+i)]*cA -cB)) \n",
+    "            \n",
+    "            total_reward.append(tmov * (0.9 ** (i-YEARS_TO_MODEL)))\n",
+    "        term_data_y.append(sum(total_reward))\n"
    ]
   },
   {
@@ -810,7 +841,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(np.array(Xs[0])[:,1])"
+    "np.array(term_data_x).shape\n"
    ]
   },
   {
@@ -819,9 +850,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(5):\n",
-    "    pred = sm.OLS(ys[i],sm.add_constant(Xs[i])).fit()\n",
-    "    print(i,pred.rsquared,np.round(pred.params,2))"
+    "predT = sm.OLS(term_data_y,sm.add_constant(term_data_x)).fit()\n",
+    "predT.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(np.array(Xs[1])[:,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(term_data_y,predT.predict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "np.std(np.array(Xs[1]),axis=0),np.mean(np.array(Xs[1]),axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " np.set_printoptions(suppress=True)\n",
+    "for i in range(YEARS_TO_MODEL):\n",
+    "    pred = sm.RLM(ys[i],(Xs[i])).fit()\n",
+    "    print(i,\":\",list(np.round(pred.params,3)),',')#,',',pred.rsquared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0 : [-0.173, 0.986, 0.0, 0.0] , 0.6569516133476782\n",
+    "1 : [0.617, 0.571, 0.362, 0.097] , 0.3644063232746716\n",
+    "2 : [0.765, 0.631, 0.18, 0.029] , 0.14830963454692692\n",
+    "3 : [0.897, 0.745, 0.05, 0.06] , 0.047642853317683254\n",
+    "4 : [0.779, 0.731, 0.045, 0.057] , 0.018632355348438878\n",
+    "5 : [0.113, 0.401, 0.041, 0.081] , 0.0027072676702022402"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred.summary()"
    ]
   },
   {
@@ -860,21 +954,30 @@
    "outputs": [],
    "source": [
     "yp = {}\n",
-    "for i in range(5):\n",
+    "for i in range(YEARS_TO_MODEL):\n",
     "    v = np.array(Xs[i])\n",
-    "    cap_space = np.maximum(90000-v[:,0],0)/30000\n",
-    "    ot = 1.0/3.0\n",
+    "    diff = (1.0-v[:,0])/3\n",
+    "    cap_space = np.maximum(diff,0.3*diff)\n",
     "    mov_from_cap = cap_space*sA\n",
     "    #pred_mov = v[:,1] + mov_from_cap\n",
-    "    RV = np.array([v[:,1], mov_from_cap]).T\n",
+    "    RV = np.array([v[:,1], v[:,2],v[:,3],mov_from_cap]).T\n",
     "    #if i==0:\n",
     "    #    RV[:,1] *= 0\n",
     "    #if i== 4:\n",
     "    #    RV[:,0] *= 0\n",
-    "    pred = sm.RLM(ys[i],RV).fit()\n",
-    "    print(i,\":\",[0] + list(np.round(pred.params,2)),\",\")#,pred.rsquared)\n",
+    "    pred = sm.OLS(ys[i],RV).fit()\n",
+    "    print(i,\":\",[0] + list(np.round(pred.params,2)),\",\",pred.rsquared)\n",
     "    yp[i] = pred.predict()\n",
     "    #print(i,mov_from_cap.mean(),v[:,1].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std(np.array(Xs[1]),axis=0),np.mean(np.array(Xs[1]),axis=0)"
    ]
   },
   {
@@ -901,7 +1004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(5):\n",
+    "for i in range(YEARS_TO_MODEL):\n",
     "    plt.figure()\n",
     "    plt.scatter(ys[i],yp[i])\n"
    ]
