--- a/trade_prototype.ipynb
+++ b/trade_prototype.ipynb
@@ -17,11 +17,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draft_pick_movs = [[0.18897327219231208, 2.0010846899420685, 0.3732236160572243],\n",
-    " [0.14727349526599293, 2.3890953884900448, 0.37877293453467575],\n",
-    " [0.20993957998560997, 2.972927445404096, 0.29807102822209075],\n",
-    " [0.2211666767279284, 3.449578532596238, 0.29588454235265493],\n",
-    " [0.2204425469188902, 3.8786269293613316, 0.30687612009524046]]\n",
+    "draft_pick_movs = [[0.12913374296107455, 7.702395173297482, 0.9448709119534404],\n",
+    " [0.1634435362737825, 10.800466295630304, 0.5741272805281132],\n",
+    " [0.15376070715940388, 13.16485546649397, 0.5015513687766904],\n",
+    " [0.15744008797681056, 15.168386405668784, 0.44871539479734146],\n",
+    " [0.14365668890459066, 16.382087641663986, 0.43341028973043805],\n",
+    " [0.10913478735324955, 16.8271402110163, 0.4739572020965056],\n",
+    " [0.08762872471828462, 16.67385454430513, 0.4872821645039682],\n",
+    " [0.07718259382269112, 16.225812656172742, 0.5046645539792276],\n",
+    " [0.08311482788019467, 15.764561758069739, 0.4537378662822118],\n",
+    " [0.0687348697126223, 14.96697451957791, 0.48694857028396676],\n",
+    " [0.06931446375815979, 14.43742528331465, 0.4869362245014235],\n",
+    " [0.07271012404187446, 13.562653960594034, 0.45759214709213336]]\n",
     "age_shift ={19: 6.4,\n",
     " 20: 6.7,\n",
     " 21: 5.0,\n",
@@ -40,7 +47,7 @@
     " 34: -4.7,\n",
     " 35: -5.1}\n",
     "\n",
-    "max_shift = max(age_shift.values())\n",
+    "max_shift = min(age_shift.values())\n",
     "\n",
     "\n",
     "draft_salaries = defaultdict(lambda: 750,\n",
@@ -77,11 +84,11 @@
     "})\n",
     "\n",
     "\n",
-    "iv = np.array([74.7 ,  7.92, 20.8 ])\n",
+    "iv = np.array([71.3 ,  6.65, 17.4 ])\n",
     "\n",
     "def get_mov(x):\n",
     "    offset = len(iv)//3\n",
-    "    tot = -2.2492\n",
+    "    tot = -1.977479789\n",
     "    for i in range(offset):\n",
     "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
     "    return tot\n",
@@ -92,7 +99,7 @@
     "    o2m[i] = get_mov(i)\n",
     "\n",
     "# replacement level\n",
-    "r_lvl = -1.306\n",
+    "r_lvl = -1.425\n",
     "\n",
     "# draft model's baseline. \n",
     "# probably should always be above replacement\n",
@@ -100,15 +107,16 @@
     "draft_lvl = o2m[0]\n",
     "\n",
     "# salaries to mov\n",
-    "sA,sB = (3.15,0)\n",
+    "sA,sB = (3.974,0)\n",
     "\n",
     "# expected mov, weight for players, weight for salary cap space\n",
     "player_vs_cap = {\n",
-    "0 : [0, 1.0, 0] ,\n",
-    "1 : [0, 1.0, 0.9] ,\n",
-    "2 : [0, 1.0, 0.8] ,\n",
-    "3 : [0, 1.0, 0.6] ,\n",
-    "4 : [0, 1.0, 0.5] ,\n",
+    "0 : [-0.164, 0.983, 0.0, 0.0] ,\n",
+    "1 : [0.622, 0.57, 0.363, 0.091] ,\n",
+    "2 : [0.76, 0.623, 0.176, 0.026] ,\n",
+    "3 : [0.897, 0.738, 0.049, 0.056] ,\n",
+    "4 : [0.788, 0.731, 0.047, 0.054] ,\n",
+    "5 : [0.248, 0.485, 0.04, 0.076] ,\n",
     "}\n",
     "\n",
     "RESIGN_CHANCE = 0.5\n"
@@ -120,23 +128,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team = { 'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,2)], #(age,ovr,salary,years_left)\n",
+    "team = { 'mov': -4, \n",
+    "        'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,2)], #(age,ovr,salary,years_left)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
-    "def get_team_value(team,sCap=90000,maxS=30000,minS=750,FAKE_RESIGN=True):\n",
+    "def get_team_value(team,sCap=90000,maxS=30000,minS=750,FAKE_RESIGN=True,YEARS=7):\n",
     "    sCapS = sCap/90000\n",
     "\n",
     "    # turn mov into draft pick and future mov\n",
     "    m2pos = lambda x: int(round(np.clip( 29/(1+np.exp(0.0036 - 0.368*(x))),0,29)))\n",
-    "    m2next = lambda year,mov: [1,0.5,0.25,0.08,0.03][year]*mov \n",
+    "    m2next = lambda year,mov: [1,0.5,0.25,0.08,0.03,0.01,0.01,0.01,0.01,0.01][year]*mov \n",
     "\n",
     "    # turn draft picks into specific predictions\n",
-    "    draft_picks = [ (yr,m2pos(m2next(yr,mov))+30*(rnd-1)) for rnd,yr,mov in team['d'] if yr < 5]\n",
+    "    draft_picks = [ (yr,m2pos(m2next(yr,mov))+30*(rnd-1)) for rnd,yr,mov in team['d'] if yr < 10]\n",
     "    # for this and the next 4 years\n",
     "    pars = defaultdict(list)\n",
     "    tss = defaultdict(int)\n",
     "\n",
-    "    for i in range(5):\n",
+    "    dpars = defaultdict(list)\n",
+    "    dtss = defaultdict(int)\n",
+    "\n",
+    "    for i in range(YEARS):\n",
     "        for age,ovr,con,yrl in team['p']:\n",
     "            if yrl >= i: # are we on the team still?\n",
     "                tss[i] += con\n",
@@ -156,28 +168,35 @@
     "        for yr,p in draft_picks:\n",
     "            if yr+1 <= i: # if drafted\n",
     "                dsal = sCapS*draft_salaries[p]\n",
-    "                tss[i] += dsal\n",
+    "                dtss[i] += dsal\n",
     "                year_since_draft = i-(yr+1)\n",
     "                x = draft_pick_movs[year_since_draft]\n",
-    "                pars[i].append(draft_lvl + x[1]*np.exp(-x[0]*(p**x[2])))\n",
+    "                dpars[i].append(x[1]*np.exp(-x[0]*(p**x[2])))\n",
     "                #print(i, yr, p, pars[i][-1],dsal)\n",
     "\n",
     "    # add salaries and player values\n",
     "    pred_movs = []\n",
-    "    for i in range(5):\n",
-    "        play = [p for p in pars[i] if p >= r_lvl]\n",
+    "    for i in range(YEARS):\n",
+    "        play = [p for p in pars[i]]\n",
     "        lp = len(play)\n",
     "        if lp < 10:\n",
     "            play= play + (10-lp)*[r_lvl]\n",
     "        play = sorted(play,reverse=True)[:10]\n",
-    "        #        play = [r_lvl+(p-r_lvl)*np.exp(-0.17330874*i) for i,p in enumerate(sorted(play,reverse=True)[:10])]\n",
     "        play_s = sum(play)\n",
-    "        salary_s = tss[i] + (10-lp)*minS\n",
-    "        cap_space = (1.0/3.0)*np.maximum(sCap-salary_s,0)/sCap\n",
-    "        mov_from_cap = cap_space*sA\n",
+    "        \n",
+    "        cap_hit = tss[i] + (10-lp)*750 #+ dtss[i]\n",
     "\n",
-    "        x = player_vs_cap[i]\n",
-    "        p_mov = x[0] + x[1]*play_s + x[2]*mov_from_cap\n",
+    "        diff = (sCap-cap_hit)/(sCap/3)\n",
+    "        cap_space = np.maximum(diff,0.1*diff)\n",
+    "        #mov_from_cap = cap_space*sA\n",
+    "        \n",
+    "        play_d = sum([_ for _ in dpars[i]])\n",
+    "\n",
+    "        \n",
+    "        x = player_vs_cap.get(i,player_vs_cap[5])\n",
+    "       # p_mov = x[0] +  x[1]*play_s + x[2]*mov_from_cap\n",
+    "        p_mov =  x[0] * (sA*cap_space) + x[1] * play_s + x[2] * team['mov'] + x[3] * play_d\n",
+    "\n",
     "        pred_movs.append(p_mov)\n",
     "        #if i == 0:\n",
     "        #print(i,lp,play_s,mov_from_cap)\n",
@@ -191,7 +210,7 @@
     "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
-    "    value = [wp*(0.8**(i)) for i,wp in enumerate(win_p)]\n",
+    "    value = [wp*(0.9**(i)) for i,wp in enumerate(win_p)]\n",
     "    #print(np.round(pred_movs,1))\n",
     "    return sum(value)\n",
     "get_team_value(team,90000,750)"
@@ -279,7 +298,7 @@
     "teams_vals = []\n",
     "for i in range(len(data['teams'])):\n",
     "    #print(team_names[i])\n",
-    "    val = get_team_value({'p':team_players[i],'d':team_picks[i]},sCap,maxS,minS)\n",
+    "    val = get_team_value({'mov':team_movs[i],'p':team_players[i],'d':team_picks[i]},sCap,maxS,minS)\n",
     "    teams_vals.append((val,team_names[i]))"
    ]
   },
@@ -307,8 +326,8 @@
     "    if t1 == t2:\n",
     "        continue\n",
     "    \n",
-    "    t1vo = get_team_value({'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
-    "    t2vo = get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "    t1vo = get_team_value({'mov':team_movs[t1], 'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "    t2vo = get_team_value({'mov':team_movs[t2], 'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
     "    pn = np.random.randint(len(team_picks[t1]))\n",
     "    picks = [_ for _ in team_picks[t1]]\n",
     "    pick = picks[pn]        \n",
@@ -318,8 +337,8 @@
     "        local_p = [_ for _ in team_players[t2]]\n",
     "        player = local_p[pi]\n",
     "        del local_p[pi]\n",
-    "        t1v = get_team_value({'p':team_players[t1] + [player],'d':picks},sCap,maxS,minS)\n",
-    "        t2v = get_team_value({'p':local_p,'d':team_picks[t2] + [pick]},sCap,maxS,minS)\n",
+    "        t1v = get_team_value({'mov':team_movs[t1],'p':team_players[t1] + [player],'d':picks},sCap,maxS,minS)\n",
+    "        t2v = get_team_value({'mov':team_movs[t2],'p':local_p,'d':team_picks[t2] + [pick]},sCap,maxS,minS)\n",
     "        if t1v > t1vo and t2v > t2vo:\n",
     "            val = min((t1v-t1vo),(t2v-t2vo))\n",
     "            deals.append((val,team_names[t1],pick,team_names[t2],player))"
@@ -348,8 +367,8 @@
     "    if t1 == t2:\n",
     "        continue\n",
     "    \n",
-    "    t1vo = get_team_value({'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
-    "    t2vo = get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "    t1vo = get_team_value({'mov':team_movs[t1],'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "    t2vo = get_team_value({'mov':team_movs[t2],'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
     "    \n",
     "    pn = np.random.randint(len(team_players[t1]))\n",
     "    players1 = [_ for _ in team_players[t1]]\n",
@@ -360,8 +379,8 @@
     "        local_p = [_ for _ in team_players[t2]]\n",
     "        player = local_p[pi]\n",
     "        del local_p[pi]\n",
-    "        t1v = get_team_value({'p':players1 + [player],'d':team_picks[t1]},sCap,maxS,minS)\n",
-    "        t2v = get_team_value({'p':local_p + [pick],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "        t1v = get_team_value({'mov':team_movs[t1],'p':players1 + [player],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "        t2v = get_team_value({'mov':team_movs[t2],'p':local_p + [pick],'d':team_picks[t2]},sCap,maxS,minS)\n",
     "        if t1v > t1vo and t2v > t2vo:\n",
     "            val = (t1v-t1vo) + (t2v-t2vo)\n",
     "            deals.append((val,team_names[t1],pick,team_names[t2],player))"
@@ -394,8 +413,8 @@
     "    if t1 == t2:\n",
     "        continue\n",
     "    \n",
-    "    t1vo = get_team_value({'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
-    "    t2vo = get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "    t1vo = get_team_value({'mov':team_movs[t1],'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "    t2vo = get_team_value({'mov':team_movs[t2],'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
     "    \n",
     "    pn = np.random.randint(len(team_players[t1]))\n",
     "    players1 = [_ for _ in team_players[t1]]\n",
@@ -412,10 +431,10 @@
     "            local_picks = [_ for _ in team_picks[t2]]\n",
     "            pick2 = local_picks[p2]       \n",
     "            del local_picks[p2]\n",
-    "            t1v1 = get_team_value({'p':players1 + [player],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "            t1v1 = get_team_value({'mov':team_movs[t1],'p':players1 + [player],'d':team_picks[t1]},sCap,maxS,minS)\n",
     "\n",
-    "            t1v = get_team_value({'p':players1 + [player],'d':team_picks[t1] + [pick2]},sCap,maxS,minS)\n",
-    "            t2v = get_team_value({'p':local_p + [pick],'d':local_picks },sCap,maxS,minS)\n",
+    "            t1v = get_team_value({'mov':team_movs[t1],'p':players1 + [player],'d':team_picks[t1] + [pick2]},sCap,maxS,minS)\n",
+    "            t2v = get_team_value({'mov':team_movs[t2],'p':local_p + [pick],'d':local_picks },sCap,maxS,minS)\n",
     "            if t1v1 < t1vo and t1v > t1vo and t2v > t2vo:\n",
     "                v1 = (t1v-t1vo)\n",
     "                v2 = (t2v-t2vo)\n",
@@ -431,24 +450,6 @@
    "outputs": [],
    "source": [
     "sorted(list(deals),reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_team_value({'p':local_p + [pick],'d':local_picks },sCap,maxS,minS,FAKE_RESIGN=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS,FAKE_RESIGN=False)"
    ]
   },
   {
@@ -473,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test = {'d':team_picks[7],'p':team_players[7]}"
+    "team_test = {'mov':team_movs[7],'d':team_picks[7],'p':team_players[7]}"
    ]
   },
   {
@@ -493,7 +494,9 @@
    },
    "outputs": [],
    "source": [
-    "team_test2 = {'d': [\n",
+    "team_test2 = {\n",
+    "    'mov':team_movs[7],\n",
+    "    'd': [\n",
     "  (2, 0, -5.418723344900641),\n",
     "  (2, 0, 8.540340637164833),\n",
     "  (1, 1, -5.418723344900641),\n",
@@ -546,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test = {'d':team_picks[2],'p':team_players[2]}\n",
+    "team_test = {'mov':team_movs[2],'d':team_picks[2],'p':team_players[2]}\n",
     "get_team_value(team_test,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test,sCap,maxS,minS,FAKE_RESIGN=False)"
    ]
   },
@@ -556,34 +559,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test2 = {'d': [(2, 0, 1.63714319636652),\n",
-    "  (2, 0, -0.541253135267356),\n",
-    "  (2, 1, 4.211933478418106),\n",
-    "  (1, 1, -6.1728821801766705),\n",
-    "  (1, 1, -3.690676899636947),\n",
-    "  (2, 1, -3.690676899636947),\n",
-    "  (1, 2, -6.1728821801766705),\n",
-    "  (2, 2, -6.1728821801766705),\n",
-    "  (2, 2, 6.384246070143772),\n",
-    "  (1, 3, -6.1728821801766705),\n",
-    "  (1, 5, -6.1728821801766705),\n",
-    "  (2, 5, -6.1728821801766705),\n",
-    "  (1, 6, -6.1728821801766705)],\n",
+    "team_test2 = {\n",
+    "    'mov':team_movs[2],\n",
+    "    'd': [(2, 0, 1.652969631948502),\n",
+    " (2, 0, 0.05698951843920175),\n",
+    " (2, 1, 4.407755127986256),\n",
+    " (1, 1, -4.91664629842538),\n",
+    " (1, 1, -3.306876503590236),\n",
+    " (2, 1, -3.306876503590236),\n",
+    " (1, 2, -4.91664629842538),\n",
+    " (2, 2, -4.91664629842538),\n",
+    " (2, 2, 6.825253437957853),\n",
+    " (1, 3, -4.91664629842538),\n",
+    " (1, 5, -4.91664629842538),\n",
+    " (2, 5, -4.91664629842538),\n",
+    " (1, 6, -4.91664629842538)],\n",
     " 'p': [(24, 51, 4800, 2),\n",
-    "  (24, 55, 1650, 2),\n",
-    "  (25, 59, 29550, 3),\n",
-    "  (27, 22, 1650, 2),\n",
-    "  (21, 25, 3900, 3),\n",
-    "  (30, 59, 20200, 4),\n",
-    "  (30, 64, 38000, 4),\n",
-    "  (32, 68, 40250, 2),\n",
-    "  (26, 26, 1650, 2),\n",
-    "  (23, 46, 1800, 1),\n",
-    "  (27, 26, 100, 0),\n",
-    "  (20, 33, 1750, 3),\n",
-    "  (23, 38, 200, 0),\n",
-    "  (28, 38, 1850, 2),\n",
-    "  (23, 29, 1650, 2)]}\n",
+    " (24, 55, 1650, 2),\n",
+    " (25, 59, 29550, 3),\n",
+    " (27, 22, 1650, 2),\n",
+    " (21, 25, 3900, 3),\n",
+    " (30, 59, 20200, 4),\n",
+    " (30, 64, 38000, 4),\n",
+    " (32, 68, 40250, 2),\n",
+    " (26, 26, 1650, 2),\n",
+    " (23, 46, 1800, 1),\n",
+    " (27, 26, 100, 0),\n",
+    " (20, 33, 1750, 3),\n",
+    " (23, 38, 200, 0),\n",
+    " (28, 38, 1850, 2),\n",
+    " (23, 29, 1650, 2)]}\n",
     "get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=False)"
    ]
   },
@@ -592,7 +597,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "team_players[2]"
+   ]
   },
   {
    "cell_type": "code",
