--- a/trade_models-3.ipynb
+++ b/trade_models-3.ipynb
@@ -415,6 +415,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sal_ovr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iv = np.array([71.3 ,  6.65, 17.4 ])\n",
+    "\n",
+    "def get_mov(x):\n",
+    "    offset = len(iv)//3\n",
+    "    tot = -1.977479789\n",
+    "    for i in range(offset):\n",
+    "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
+    "    return tot\n",
+    "\n",
+    "# estimated mov per ovr\n",
+    "o2m = {}\n",
+    "for i in np.arange(101):\n",
+    "    o2m[i] = get_mov(i)\n",
+    "\n",
+    "# replacement level\n",
+    "r_lvl = get_mov(int(round(RL)))\n",
+    "\n",
+    "\n",
+    "mov = {i:get_mov(i) for i in range(101)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ovr_salaries = defaultdict(list)\n",
+    "sal_ovrd = defaultdict(list)\n",
+    "for p,s in player_ratings:\n",
+    "    v = player_ratings[(p,s)]\n",
+    "    if (p,s) in contracts:\n",
+    "        c = contracts[(p,s)][0]\n",
+    "        ovr_salaries[v['ovr']].append(c)\n",
+    "        sal_ovrd[c].append(v['ovr'])\n",
+    "sal_ovr = np.array([[s,mov[round(np.mean(c))]-r_lvl] for s,c in sal_ovrd.items()])\n",
+    "sal_ovr[:,0]/=30000\n",
+    "\n",
+    "sO = sm.RLM(sal_ovr[:,1],sal_ovr[:,0]).fit()\n",
+    "plt.scatter(sal_ovr[:,0],sal_ovr[:,1])\n",
+    "plt.scatter(sal_ovr[:,0],sO.predict())\n",
+    "plt.xlabel('% of max salary')\n",
+    "plt.ylabel('+/- above replacement')\n",
+    "sA = sO.params[0]\n",
+    "sA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -437,15 +506,24 @@
     "                    tss[i] += contracts[(pid,s)][0]\n",
     "                    age = s-player_born[pid]\n",
     "                    ovr = player_ratings[(pid,s)]['ovr']\n",
-    "                    for j in range(i):\n",
+    "                    for j in range(max(0,i-1)):\n",
     "                        ovr+=age_shift.get(age+j,max_shift)\n",
     "                    pars[i].append(ovr)\n",
     "        for pid in team_players[(tid,s)]:\n",
-    "            if (pid,s) in contracts and contracts[(pid,s)][1] > YEARS_TO_MODEL:\n",
-    "                extra_years = contracts[(pid,s)][1] - YEARS_TO_MODEL\n",
-    "                amount_to_add = 0.25*(contracts[(pid,s)][0] * extra_years)/YEARS_TO_MODEL\n",
+    "            if (pid,s) in contracts and contracts[(pid,s)][1] >= YEARS_TO_MODEL:\n",
+    "                age = s-player_born[pid]\n",
+    "                \n",
+    "                ovr2 = player_ratings[(pid,s)]['ovr']\n",
+    "                povrs = [ovr2]\n",
+    "                for j in range(contracts[(pid,s)][1]-1):\n",
+    "                    ovr2+=age_shift.get(age+j,max_shift)\n",
+    "                    povrs.append(ovr2)\n",
+    "                pmovs = [mov[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
+    "                ccont = [30000*(pmov-r_lvl)/sA for pmov in pmovs]\n",
+    "                cvals = [c-contracts[(pid,s)][0] for c in ccont]\n",
+    "                amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
     "                for i  in range(YEARS_TO_MODEL):\n",
-    "                    tss[i] += amount_to_add\n",
+    "                    tss[i] -= amount_to_add\n",
     "                    \n",
     "        for i in range(YEARS_TO_MODEL):\n",
     "            tmov = team_movs[(tid,s+i)]\n",
@@ -472,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " np.set_printoptions(suppress=True)\n",
+    "np.set_printoptions(suppress=True)\n",
     "scales=[]\n",
     "rsq = [] \n",
     "for i in range(YEARS_TO_MODEL):\n",
@@ -489,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[0.6376822211254021, 0.31142551288764886, 0.13091724734737853]"
+    "[0.6356287420262297, 0.2814157259822434, 0.1303198654171429]"
    ]
   },
   {
@@ -498,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draftP"
+    "draftP,sA"
    ]
   },
   {
