--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -61,16 +61,19 @@
     "\n",
     "# expected mov, weight for players, weight for salary cap space\n",
     "weights = {\n",
-    "0 : ( [1.312, 1.025] , 1.26 ),\n",
-    "1 : ( [11.141, 0.725] , 1.79 ),\n",
-    "2 : ( [9.143, 0.462] , 2.76 ),\n",
+    "0 : ( [0.759, 1.021] , 1.26 ),\n",
+    "1 : ( [11.133, 0.709] , 1.89 ),\n",
+    "2 : ( [9.198, 0.478] , 2.77 ),\n",
     "}\n",
     "\n",
     "# draft value\n",
     "draftP = np.array([0.33331122, 0.30847174, 0.58789643])\n",
     "\n",
     "# team value\n",
-    "team_mov = [-0.17330874,  0.33627302, 99.72968488]\n"
+    "team_mov = [-0.17330874,  0.33627302, 99.72968488]\n",
+    "\n",
+    "# salary multiplier\n",
+    "sA = 3.148966624999395"
    ]
   },
   {
@@ -80,7 +83,7 @@
    "outputs": [],
    "source": [
     "team = { 'mov': -4, \n",
-    "        'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,2)], #(age,ovr,salary,years_left)\n",
+    "        'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,5)], #(age,ovr,salary,years_left)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
     "def get_team_value(team,sCap=90000,minS=750):\n",
@@ -104,16 +107,23 @@
     "        for age,ovr,con,yrl in team['p']:\n",
     "            tss[i] += con\n",
     "            ovr2 = ovr\n",
-    "            for j in range(i):\n",
+    "            for j in range(max(0,i-1)):\n",
     "                ovr2+=age_shift.get(age+j,max_shift)\n",
     "            pars[i].append(ovr2)\n",
     "    for age,ovr,con,yrl in team['p']:\n",
-    "        if yrl > YEARS_TO_MODEL:\n",
-    "            extra_years = yrl - YEARS_TO_MODEL\n",
-    "            amount_to_add = CON_BUMP*(con * extra_years)/YEARS_TO_MODEL\n",
+    "        if yrl >= YEARS_TO_MODEL:\n",
+    "            #print('yES',(age,ovr,con,yrl))\n",
+    "            ovr2  =ovr\n",
+    "            povrs = [ovr2]\n",
+    "            for j in range(yrl-1):\n",
+    "                ovr2+=age_shift.get(age+j,max_shift)\n",
+    "                povrs.append(ovr2)\n",
+    "            pmovs = [o2m[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
+    "            ccont = [(sCap/3)*(pmov-r_lvl)/sA for pmov in pmovs]\n",
+    "            cvals = [c-con for c in ccont]\n",
+    "            amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
     "            for i  in range(YEARS_TO_MODEL):\n",
-    "                tss[i] += amount_to_add\n",
-    "\n",
+    "                tss[i] -= amount_to_add\n",
     "    for yr,p in draft_picks:\n",
     "        dpars.append((0.99**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
     "    \n",
